# facility-war

./: AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  requirements.txt  streamlit_app.py
docs/: first-pr.md
eval/: backtest_2020_covid.py  calibration_brier.py
facility_war/: __init__.py  cli.py  report.py  simulator.py
graphs/: h100_bom.yaml
reports/2026-Q3-h100-substrate-shock/: report.md  run.json
scenarios/: az_drought_1in50.yaml  suez_closure_30d.yaml  taiwan_substrate_90d.yaml
schemas/: scenario.schema.json  sim_run.schema.json  supply_graph.schema.json
scripts/: validate_schemas.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
src/facility_war/: __init__.py  cli.py  simulator.py
tests/: test_determinism.py  test_geography_propagation.py  test_render_report.py  test_report_presence.py  test_schema_validation.py  test_show.py
